
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gonzalezTatiana.evaluacion1.GonzalezPrietoTatiana" 
    android:orientation="vertical">
    
    <TextView android:id ="@+id/textoEscoge1"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/textoEscoge1"/>
    
    <EditText android:id = "@+id/nombre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/escribe"/>
    
    <RadioGroup
        android:id="@+id/seleccion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/naranja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/naranja" />

        <RadioButton
            android:id="@+id/verde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verde" />

                <RadioButton
                    android:id="@+id/azul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/azul" />

    </RadioGroup>
        
    <TextView android:id ="@+id/textoEscoge2"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/textoEscoge2"/>
    
    <EditText android:id = "@+id/nombre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/escribe"/>
    
    <RadioGroup
        android:id="@+id/seleccion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton android:id="@id/naranja"
            android:text="@string/naranja"/>
        <RadioButton android:id="@id/verde"
            android:text="@string/verde"/>
                <RadioButton android:id="@id/azul"
            android:text="@string/azul"/>
    </RadioGroup>
    
    <Button
        android:id="@+id/jugar"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/jugar"
    />
</LinearLayout>
