<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gonzalezTatiana.evaluacion1.GonzalezPrietoTatiana" >

    <item
        android:id="@+id/acercaDe"
        android:orderInCategory="100"
        android:title="@string/acercaDe"
        android:icon="@android:drawable/ic_menu_info_details"/>

    <item
        android:id="@+id/configuracion"
        android:orderInCategory="200"
        android:title="@string/configuracion"
        android:icon="@android:drawable/ic_menu_manage" 
        />
    
    <item
        android:id="@+id/historico"
        android:orderInCategory="300"
        android:title="@string/historico"
        android:icon="@android:drawable/ic_menu_recent_history"
    	/>
</menu>
